--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <head>
 
         <title>RESUME</title>
+        <link rel="icon" href="briefcase-solid.svg" type="image/svg+xml" >
         <link rel="stylesheet" href="iGotStyleBaby.css">
         <!-- Fonts -->
         <link rel="preconnect" href="https://fonts.gstatic.com">
