--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <div class="left">
         <p>
         <h4><i class="fas fa-briefcase"></i> PROJECTS </h4>
-        HumTum — Founder
+        <h5>HumTum — Founder</h5>
         HumTum is a blockchain based startup aimed for the agricultural sector of India. I was managing a 8 member professional blockchain developer team.
         </p>
 
